# feed_ursus

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  LICENSE  Pipfile  README.md  date_parser.py  docker-compose.yml  dotenv.sample  feed_sinai.py  feed_ursus.py  mapper.py  pyproject.toml  pytest.ini  release.yml  year_parser.py
.devcontainer/: devcontainer-lock.json  devcontainer.json
.github/: dependabot.yml
.github/configs/: release-drafter.yml
.github/workflows/: ci.yml  release.yml
feed_sinai/: feed_sinai.py  sinai_json_importer.py  sinai_types.py  solr_record.py
feed_ursus/: controlled_fields.py  date_parser.py  feed_ursus.py  importer.py  less_strict_solr_record.py  mapper.py  reindex.py  solr_record.py  ursus_solr_record.py  util.py  year_parser.py
feed_ursus/mapper/: dlp.py  sinai.py
feed_ursus/mapper/fields/: language.yml  rights_statement.yml
fields/: language.yml
mapper/: dlp.py
solr/config/: schema.xml
test/: fixtures.py  test_date_parser.py  test_feed_sinai.py  test_feed_ursus.py  test_mapper.py  test_mapper_dlp.py  test_mapper_sinai.py  test_year_parser.py
tests/: conftest.py  field_accounting.ipynb  fixtures.py  test_controlled_fields.py  test_date_parser.py  test_feed_ursus.py  test_importer.py  test_integration.py  test_less_strict_solr_record.py  test_mapper_dlp.py  test_mapper_sinai.py  test_reindex.py  test_solr_record.py  test_ursus_solr_record.py  test_util.py  test_year_parser.py
tests/fixtures/: anais_collection.csv  anais_work_simple.csv  pypi-response.json
tests/sinai/: test_integration.py  test_sinai_json_importer.py  test_sinai_types.py  test_solr_record.py
tests/sinai/export_test/agents/: s1c88w.json
tests/sinai/export_test/layers/: te5fmsg1-2.json  te5fp1ol.json  te5fp2ol.json  tebvp1ol-2.json  ten0p1ol.json  ten0p1ul1.json  ten0p1ul2.json
tests/sinai/export_test/merged/: te5f0f9b.json  tebv9g4m-2.json  tebv9g4m.json  ten02zkr.json  ten0uto1.json  ten0uto2.json  z1h13zxq.json
tests/sinai/export_test/ms_objs/: te5f0f9b.json  tebv9g4m-2.json  tebv9g4m.json
tests/sinai/export_test/outputs/: z1h13zxq.json
tests/sinai/export_test/places/: pl1234.json  pl5678.json  pl9012.json
tests/sinai/export_test/solr/: te5f0f9b.json  tebv9g4m-2.json  tebv9g4m.json  ten02zkr.json  ten0uto1.json  ten0uto2.json  z1h13zxq.json
tests/sinai/export_test/text_units/: te5fmsg1t1-2.json  te5fp1olt1.json  te5fp2olt1.json  tebvp1olt1-2.json
