[tool.poetry]
name = "feed-ursus"
version = "0.0.0"
description = "Command line tool to load CSV content into a Solr index for the UCLA Digital Library's frontend, Ursus (https://digital.library.ucla.edu/)"
authors = ["Andy Wallace <andrewwallace@library.ucla.edu>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
pysolr = "^3.8"
requests = "^2.32.2"
click = "^8.1.3"
rich = "^13.4.1"
python-dateutil = "^2.8.2"
pyyaml = "^6.0.1"
setuptools = "^74.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "*"
ipdb = "^0.13.13"
black = {version = "^24.10.0", python = "^3.9"}
flake8 = {version = "^7.1.1", python = "^3.9"}
pylint = {version = "^3.3.1", python = "^3.9"}

[tool.poetry.group.test.dependencies]
pytest = "*"
pytest-sugar = "^1.0.0"

[tool.poetry.scripts]
feed_ursus = 'feed_ursus.feed_ursus:feed_ursus'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
