[project]
name = "feed-ursus"
dynamic = ["version"]
description = "Command line tool to load CSV content into a Solr index for the UCLA Digital Library's frontend, Ursus (https://digital.library.ucla.edu/)"
authors = [{ name = "Andy Wallace", email = "andrewwallace@library.ucla.edu" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "pysolr>=3.8",
    "requests>=2.32.2",
    "click>=8.1.3",
    "rich>=13.4.1",
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0.1",
    "setuptools>=74",
    "httpx>=0.28.1",
    "edtf>=5.0.0",
    "pydantic>=2.11.7,<3",
]

[project.scripts]
feed_ursus = "feed_ursus.feed_ursus:feed_ursus"
sinai = "feed_sinai.feed_sinai:sinai"

[dependency-groups]
dev = [
    "mypy",
    "ipdb>=0.13.13,<0.14",
    "flake8>=7.1.1,<8 ; python_version ~= '3.9'",
    "pylint>=3.3.1,<4 ; python_version ~= '3.9'",
    "types-python-dateutil>=2.9.0.20250708,<3",
    "ruff>=0.12.7",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.4.20250611",
]
test = [
    "pytest",
    "pytest-sugar>=1.0.0,<2",
    "pytest-asyncio>=1.0.0,<2",
]

[tool.uv]
default-groups = [
    "dev",
    "test",
]

[tool.ruff.lint]
select = ["I"]

[tool.mypy]
plugins = ['pydantic.mypy']
disallow_untyped_defs = true
check_untyped_defs = true

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build]
only-include = ["feed_ursus", "feed_sinai"]
